<resources>
    <string name="app_name">xilfteN</string>
    <string name="image_trending">image_trending</string>
    <string name="trending_now">Trending Now</string>
    <string name="tv_show">TV Shows</string>
    <string name="releases">Releases</string>
    <string name="facebook_app_id">493826424367113</string>
    <string name="fb_login_protocol_scheme">fb493826424367113</string>
    <string name="nationals">Nationals</string>
    <string name="comedy">Comedy</string>
    <string name="because_you_watched">Because you watched: Saw II</string>
    <string name="description_ipsum">I drink your milkshake hello, we’re cockneys blue oyster bar great dictator? Rugged et hulk hogan Leonine hulk hogan basil fawlty yosemite sam leslie phillips, luxurious yosemite sam hulk hogan leslie phillips hungarian basil fawlty worn with distinction cigars rugged et Leonine hulk hogan, rugged et hungarian cigars luxurious leslie phillips yosemite sam hulk hogan worn with distinction Leonine trimmed old west sheriff basil fawlty hulk hogan mustachioed?</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

</resources>
