<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_marginBottom="16dp"
    android:background="@color/Negro"
    android:orientation="vertical"
    tools:context=".View.FragmentHome">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <ImageView
            android:layout_margin="16dp"
            android:layout_width="match_parent"
            android:layout_height="25dp"
            android:layout_gravity="center"
            android:scaleType="centerInside"
            android:src="@drawable/xilften" />

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="230dp"
            android:layout_gravity="center"
            android:scaleType="centerInside"
            android:src="@drawable/johnwick_horizontal" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="8dp"
            android:text="@string/trending_now"
            android:textColor="#FFFFFF"
            android:textSize="15sp"
            android:textStyle="bold" />

        <android.support.v7.widget.RecyclerView
            android:id="@+id/fragment_home_recycler_trending"
            android:layout_width="match_parent"
            android:layout_height="150dp"
            android:layout_marginBottom="16dp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="8dp"
            android:text="@string/tv_show"
            android:textColor="#FFFFFF"
            android:textSize="15sp"
            android:textStyle="bold" />

        <android.support.v7.widget.RecyclerView
            android:id="@+id/fragment_home_recycler_series"
            android:layout_width="match_parent"
            android:layout_height="150dp"
            android:layout_marginBottom="16dp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="8dp"
            android:text="@string/releases"
            android:textColor="#FFFFFF"
            android:textSize="15sp"
            android:textStyle="bold" />

        <android.support.v7.widget.RecyclerView
            android:id="@+id/fragment_home_recycler_releases"
            android:layout_width="match_parent"
            android:layout_height="150dp"
            android:layout_marginBottom="16dp" />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="8dp"
            android:text="@string/nationals"
            android:textColor="#FFFFFF"
            android:textSize="15sp"
            android:textStyle="bold" />

        <android.support.v7.widget.RecyclerView
            android:id="@+id/fragment_home_recycler_national"
            android:layout_width="match_parent"
            android:layout_height="150dp"
            android:layout_marginBottom="16dp" />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="8dp"
            android:text="@string/comedy"
            android:textColor="#FFFFFF"
            android:textSize="15sp"
            android:textStyle="bold" />

        <android.support.v7.widget.RecyclerView
            android:id="@+id/fragment_home_recycler_comedy"
            android:layout_width="match_parent"
            android:layout_height="150dp"
            android:layout_marginBottom="16dp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="8dp"
            android:text="@string/because_you_watched"
            android:textColor="#FFFFFF"
            android:textSize="15sp"
            android:textStyle="bold" />

        <android.support.v7.widget.RecyclerView
            android:id="@+id/fragment_home_recycler_saw"
            android:layout_width="match_parent"
            android:layout_height="150dp"
            android:layout_marginBottom="16dp" />

    </LinearLayout>

</ScrollView>